--- a/more_about_me/index.html
+++ b/more_about_me/index.html
@@ -11,6 +11,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Yong-Han Lin's personal website" />
+		<meta name="author" content>
 		<meta property="og:title" content="Yong-Han Lin" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://scod0401.github.io/more_about_me/index.html" />
