--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Yong-Han Lin's personal website, she is currently a Human-Computer Interaction (HCI) research assistant at Taiwan's National Yang-Ming Chiao-Tung University." />
+		<meta name="author" content="Yong-Han Lin">
 		<meta property="og:title" content="Yong-Han Lin" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://scod0401.github.io/" />
