--- a/index.html
+++ b/index.html
@@ -224,10 +224,9 @@
 				
 				<div class="row">
 					<ul>
-						<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices system_evaluation" id="noti_alert" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">From Default to Distinct: Exploring the Effectiveness of Customized Notification
-							Alerts in Improving User Awareness of and Attendance to Mobile Notifications </span> 
+						<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices system_evaluation" id="noti_alert" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">"I Want Lower Tone for Work-Related Notifications": Exploring the Effectiveness of User-Assigned Notification Alerts in Improving User Speculation of and Attendance to Mobile Notifications </span> 
 							- Full paper | Collaborator
-							<br>Li-Ting Su, <u>Yong-Han Lin</u>, Tang-Jie Chang, Jie Tsai, Zi-Xun Tang, Yung-Ju Chang 
+							<br>Tang-Jie Chang, Li-Ting Su, <u>Yong-Han Lin</u>, Jie Tsai, Zi-Xun Tang, Yung-Ju Chang 
 							<br><em>In submission to the 2024 ACM International Conference on Mobile Human-Computer Interaction</em> (MobileHCI '24)
 							<br>[<a class="abs_trigger" id="abs_noti_alert" style="cursor: pointer;">ABS</a>] 
 							[<a href="mailto:alberta.cs07@nycu.edu.tw" target="_blank">Request For Paper</a>]
@@ -457,7 +456,7 @@
 						elementClicked_abs_noti_alert = true;
 						abs.innerHTML +=
 							"<div id='abs_text_noti_alert' style='border:dashed; padding:1em; border-width:1px; border-radius:5px; margin:5px 0; border-color:#AAAAAA;'>" +
-							"This study investigates customized notification alerts’ impact on user awareness and notification attendance. Through a co-design workshop, we identified notification types users wish to differentiate via customized alerts. We then developed NotiSpeculate, an Android app delivering customized alerts for user-defined categories. A 3-week experience sampling study with 37 smartphone users demonstrated that customized alerts resulted in better users’ awareness of arriving notifications and more effective notification attendance. Also, delivery of customized alerts did not cause more disturbance than default alerts. However, a context-aware mechanism that restricted the delivery of customized alert did not decrease perceived disturbance but added confusion. In configuring categories, the categories most commonly defined by users were related to work and social interactions. Three main characteristics that participants sought from a customized notification alert were: familiarity, reflectiveness, and distinctiveness." +
+							"Research indicates that smartphone users often speculate about notifications upon sensing their arrival, aiding their decision to attend to them. This speculation, however, relies on the presence of sufficient clues to associate with the notification, which are not always available. To overcome this challenge, we explored the concept of users assigning specific meanings to notification alerts to aid in their speculation and response strategies. We conducted an ESM study with 37 participants, comparing the effectiveness of constant user-assigned alerts with context-aware delivery. Results indicate that user-assigned alerts significantly enhance notification awareness, improving both speculation accuracy and the effectiveness of notification attendance. This heightened awareness also led participants to ignore notifications more often due to unavailability rather than assuming irrelevance. However, context-aware alert delivery, which delivered alerts only in certain conditions, introduced confusion. Finally, in determining alerts for specific notification types, participants considered factors including familiarity, uniqueness, disruptiveness, and emotional resonance."
 							"</div>"
 						;
 					}
