--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
 							<tr>
 								<th scope="row" style="width: 80px;">Jan 12, <br>2024</th>
 								<td>
-									Submission to IMWUT was recommended for a revision cycle!
+									Submission to <a href="https://www.ubicomp.org/ubicomp-iswc-2024/imwut_papers/" target="_blank">IMWUT 2024</a> was recommended for a revision cycle! 
+									Continue working on it with my great collaborators to turn it into an accepted paper.
 								</td>
 							</tr>
 							<tr>
@@ -182,13 +183,13 @@
 				<h5><span style="font-weight: 600;">Keywords:</span> 
 					<a class="topic_trigger" id="topic_trigger_mobile_notifications" style="cursor: pointer;"><span style="color: #035772;">mobile notifications</span></a> | 
 					<a class="topic_trigger" id="topic_trigger_experience_sampling_method" style="cursor: pointer;"><span style="color: #035772;">experience sampling method</span></a> | 
-					<a class="topic_trigger" id="topic_trigger_ubiquitous_devices" style="cursor: pointer;"><span style="color: #035772;">ubiquitous devices</span></a> | 
+					<a class="topic_trigger" id="topic_trigger_ubiquitous_devices" style="cursor: pointer;"><span style="color: #035772;">context-aware computing</span></a> | 
 					<a class="topic_trigger" id="topic_trigger_system_evaluation" style="cursor: pointer;"><span style="color: #035772;">system evaluation</span></a> |  
-					<a class="topic_trigger" id="topic_trigger_social_support" style="cursor: pointer;"><span style="color: #035772;">social support</span></a></h5>
+					<a class="topic_trigger" id="topic_trigger_social_support" style="cursor: pointer;"><span style="color: #035772;">empirical software engineering</span></a></h5>
 				<h5>(* indicates equal contribution)</h5>
 				<div style=border:solid;padding:1em;border-width:1px;border-radius:20px;margin-bottom:1.1em;border-color:#AAAAAA>
 					<!--<h4><span style="font-weight: 600;">✨Main Research:</span> Notification Management - [<a><div class="tooltip" style="cursor: pointer; color: #035772;">Project Site<span class="tooltiptext">Soon to come...</span></div></a>]</h4>-->
-					<h4><span style="font-weight: 600;">✨Main Research:</span> Notification Management - [<a href="./notimanager.html" target="_blank"><span style="color: #035772;">Project Site</span></a>]</h4>
+					<h4><span style="font-weight: 600;">✨Main Research:</span> An <a href="./notimanager.html" target="_blank"><span style="color: #035772;">intelligent notification system</span></a> for improving notification management</h4>
 					<div class="row">
 						<ul>
 							
