--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 								<th scope="row" style="width: 80px;">Jan 12, <br>2024</th>
 								<td>
 									Submission to <a href="https://www.ubicomp.org/ubicomp-iswc-2024/imwut_papers/" target="_blank">IMWUT 2024</a> was recommended for a revision cycle! 
-									Continue working on it with my great collaborators to turn it into an accepted paper.
+									Continue working on it with my great collaborators to turn it into an fully-accepted paper.
 								</td>
 							</tr>
 							<tr>
