update new username

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="Yong-Han Lin">
 		<meta property="og:title" content="Yong-Han Lin" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://scod0401.github.io/" />
+		<meta property="og:url" content="https://yonghanlin.github.io/" />
 		<meta property="og:image" content="images/avatar_new.jpg" />
 		<meta property="og:description" content="Yong-Han Lin's personal website, she is currently a Human-Computer Interaction (HCI) research assistant at Taiwan's National Yang-Ming Chiao-Tung University." />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -43,7 +43,7 @@
 					<div>EX-Software Engineering Intern at Tech Startup</div>-->
 					<ul class="icons">
 						<li><a title="Google Scholar" href="https://scholar.google.com.tw/citations?user=zrsqlLUAAAAJ&hl=zh-TW&authuser=2" target="_blank" class="icon brands"><i class="ai ai-google-scholar ai-lg"></i></a></li>
-						<li><a title="Github" href="https://github.com/scod0401" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a title="Github" href="https://github.com/yonghanlin" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a title="Twitter" href="https://twitter.com/yoonghaan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
 						<li><a title="Email" href="mailto:alberta.cs07@nycu.edu.tw" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
@@ -308,7 +308,7 @@
 						<p>Good Finance is a finance company that worked with us, we helped them understand how user read stock price and provided design implications to match with users' need by conducting user research, survey and competitor analysis.</p>
 					</article>
 					<article class="col-6 col-12-xsmall">
-						<a href="https://github.com/scod0401/travel-in-taiwan" class="image fit thumb" target="_blank"><img src="images/projects/Travel_in_Taiwan.png" alt="" /></a>
+						<a href="https://github.com/yonghanlin/travel-in-taiwan" class="image fit thumb" target="_blank"><img src="images/projects/Travel_in_Taiwan.png" alt="" /></a>
 						<h3>Travel In Taiwan</h3>
 						<p>Travel In Taiwan is a travel website that helps people find places to travel in Taiwan by selecting their preferences. I designed and build the frontend and backend of this website.</p>
 					</article>
