--- a/more_about_me/index.html
+++ b/more_about_me/index.html
@@ -14,7 +14,7 @@
 		<meta name="author" content>
 		<meta property="og:title" content="Yong-Han Lin" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://scod0401.github.io/more_about_me/index.html" />
+		<meta property="og:url" content="https://yonghanlin.github.io/more_about_me/index.html" />
 		<meta property="og:image" content="../images/avatar_new.jpg" />
 		<meta property="og:description" content="Yong-Han Lin's personal website" />
 		
