--- a/notimanager.html
+++ b/notimanager.html
@@ -13,7 +13,7 @@
 		<meta name="description" content="NotiManager - research application for intelligent notificaiton management" />
 		<meta property="og:title" content="NotiManager" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://scod0401.github.io/notimanager.html" />
+		<meta property="og:url" content="https://yonghanlin.github.io/notimanager.html" />
 		<meta property="og:image" content="images/NotiManager/logo.jpg" />
 		<meta property="og:description" content="NotiManager - research application for intelligent notificaiton management" />
 
