update new email

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<li><a title="Github" href="https://github.com/yonghanlin" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a title="Twitter" href="https://twitter.com/yoonghaan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
-						<li><a title="Email" href="mailto:alberta.cs07@nycu.edu.tw" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a title="Email" href="mailto:yon9hanlin@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						<li><a title="CV" href="files/YongHan_Lin_CV.pdf" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
 					</ul>
 					<ul class="actions">
@@ -89,7 +89,7 @@
 					<p>
 						<span style="font-weight: 600;color: #035772;">📢 Looking for a Ph.D. position starting in Fall 2024!
 						Happy to collaborate and connect with others. 😀 <br>
-						📩 alberta410476 [at] gmail [dot] com </span>
+						📩 yon9hanlin [at] gmail [dot] com </span>
 					</p>					
 				</header>
 
