--- a/index.html
+++ b/index.html
@@ -283,7 +283,9 @@
 							<li>
 								<a href="./more_about_me/index.html#other" target="_blank">doing something cool</a>
 							</li>
-	
+							<li>
+								playing badminton, watching movies, and playing board games (especially Avalon!)
+							</li>
 						</ul>
 					</div>
 				</p>
