--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 						
 					</p>
 					<p>My research interests lie broadly in Human-Computer Interaction (HCI) and Human-centered AI.
-						I am interested in designing, building, and studying computer systems that offer automation and personalization. 
-						In my current research, I designed a notification management system and used mixed-methods to study users' experiences with this system. This system was built to facilitate users' notification-handling workflows, helping them in efficiently and effectively processing notifications through our automated functions, while also providing them with more autonomy over these automations.
-						As a HCI researcher, I envision a future where everyday technologies understand and adapt to the unique needs of individuals across various contexts while also enabling each person to have greater autonomy over its use and to easily understand its functionality.
+						I am interested in designing, building, and studying technologies that offer automation and personalization. 
+						In my current research, I designed a notification management system and used mixed-methods to study users' experiences with this system. This notification system was built to facilitate users' notification-handling workflows, helping them in efficiently and effectively processing notifications through our automated functions, while also providing them with more autonomy over these automations.
+						As a HCI researcher, I envision a future where every computing system understands and adapts to the unique needs of individuals across various contexts while also enabling each person to have greater autonomy over its use.
 					</p>
 					<p>
 						In the past, I had two remote research internship experiences. One was at the UC Davis Collaborative and Social Computing (CSC) Lab, where I worked with <a href="http://www.haochuanwang.info/" target="_blank">Dr. Hao-Chuan Wang</a> 
