--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					<a class="topic_trigger" id="topic_trigger_experience_sampling_method" style="cursor: pointer;"><span style="color: #035772;">experience sampling</span></a> | 
 					<a class="topic_trigger" id="topic_trigger_ubiquitous_devices" style="cursor: pointer;"><span style="color: #035772;">context-aware computing</span></a> | 
 					
-					<a class="topic_trigger" id="topic_trigger_social_support" style="cursor: pointer;"><span style="color: #035772;">reading support</span></a></h5>
+					<a class="topic_trigger" id="topic_trigger_social_support" style="cursor: pointer;"><span style="color: #035772;">reading</span></a></h5>
 				<h5>(* indicates equal contribution)</h5>
 				<div style=border:solid;padding:1em;border-width:1px;border-radius:20px;margin-bottom:1.1em;border-color:#AAAAAA>
 					<!--<h4><span style="font-weight: 600;">✨Main Research:</span> Notification Management - [<a><div class="tooltip" style="cursor: pointer; color: #035772;">Project Site<span class="tooltiptext">Soon to come...</span></div></a>]</h4>-->
