--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<p>My research interests lie broadly in Human-Computer Interaction (HCI) and Human-centered AI.
 						I am interested in designing, building, and studying technologies that provide automation or/and empower end-users. 
 						In my current research, I designed a notification management system and used mixed-methods to study users' experiences with this system. 
-						This system was built to facilitate users' workflows in reading and acting on notifications, helping them efficiently and effectively process notifications through our automated functions, while also providing them with manual functions to control over these automations.
+						This system was built to facilitate users' workflows in reading and acting on notifications, helping them efficiently and effectively process notifications through our automated functions, while also providing them with manual functions to adjust these automations.
 						As a HCI researcher, I envision a future where every automated system is intelligent enough to understand and adapt to the unique needs of individuals across various contexts while also enabling each user to have autonomy over its use.
 					</p>
 					<p>
