--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<header class="major">
 		
 					<p>Hi, I am Yong-Han Lin, you can call me Johanne or in Chinese: 林詠涵. I am currently a research assistant located in Taiwan,
-						working with <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
+						being mentored by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
 						I received the degree of B.S. in Computer Science in the summer of 2022 from the <a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao Tung University). 
 						
 					</p>
@@ -77,10 +77,10 @@
 						As a HCI researcher, I envision a future where every automated system is intelligent enough to understand and adapt to the unique needs of individuals across various contexts while also enabling each user to have autonomy over its use.
 					</p>
 					<p>
-						In the past, I had two remote research internship experiences. One was at the UC Davis Collaborative and Social Computing (CSC) Lab, where I worked with <a href="http://www.haochuanwang.info/" target="_blank">Dr. Hao-Chuan Wang</a> 
+						In the past, I had two remote HCI research internship experiences. One was at the UC Davis Collaborative and Social Computing (CSC) Lab, where I worked under the guidance of <a href="http://www.haochuanwang.info/" target="_blank">Dr. Hao-Chuan Wang</a> 
 						and <a href="https://www.yclee.net/" target="_blank">Dr. Yi-Chieh (EJ) Lee</a>. 
-						The other was at the Polytechnique Montréal Human-Centered Design (HCD) Lab, where I worked with <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a>.
-						Also, I was a software engineering intern at Xaduro Inc., a travel tech startup in Taiwan.	 
+						The other was at the Polytechnique Montréal Human-Centered Design (HCD) Lab, where I was under the guidance of <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a>.
+							 
 					</p>
 					<!--<p>
 						In the past, I had a remote research internship experience, at the Human-Centered Design Lab at Polytechnique Montréal led by <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a>.
