update personal website and NotiManager project site after paper revision

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						I am interested in designing, building, and studying technologies that provide automation or/and empower end-users. 
 						In my current research, I designed a notification management system and used mixed-methods to study users' experiences with this system. 
 						This system was built to facilitate users' workflows in reading and acting on notifications, helping them efficiently and effectively process notifications through our automated functions, while also providing them with manual functions to adjust these automations.
-						As a HCI researcher, I envision a future where every automated system is intelligent enough to understand and adapt to the unique needs of individuals across various contexts while also enabling each user to have autonomy over its use.
+						<!--As a HCI researcher, I envision a future where every automated system is intelligent enough to understand and adapt to the unique needs of individuals across various contexts while also enabling each user to have autonomy over its use.-->
 					</p>
 					<p>
 						In the past, I had two remote HCI research internship experiences. One was at the UC Davis Collaborative and Social Computing (CSC) Lab, where I worked under the guidance of <a href="http://www.haochuanwang.info/" target="_blank">Dr. Hao-Chuan Wang</a> 
@@ -107,13 +107,13 @@
 				<div class="row" style="height: 200px; overflow-y : scroll; -webkit-overflow-scrolling: touch;">
 					<table class="table">
 						<tbody>
-							<tr>
+							<!--<tr>
 								<th scope="row" style="width: 80px;">Jan 12, <br>2024</th>
 								<td>
 									First-author submission to <a href="https://www.ubicomp.org/ubicomp-iswc-2024/imwut_papers/" target="_blank">IMWUT 2024</a> was recommended for a revision cycle! 
 									Continue working on it with my great collaborators to turn it into a fully-accepted paper.
 								</td>
-							</tr>
+							</tr>-->
 							<tr>
 								<th scope="row" style="width: 80px;">Dec 26,<br>2023</th>
 								<td>
@@ -192,14 +192,14 @@
 				<h5>(* indicates equal contribution)</h5>
 				<div style=border:solid;padding:1em;border-width:1px;border-radius:20px;margin-bottom:1.1em;border-color:#AAAAAA>
 					<!--<h4><span style="font-weight: 600;">✨Main Research:</span> Notification Management - [<a><div class="tooltip" style="cursor: pointer; color: #035772;">Project Site<span class="tooltiptext">Soon to come...</span></div></a>]</h4>-->
-					<h4><span style="font-weight: 600;">✨Main Research:</span> <a href="./notimanager.html" target="_blank"><span style="color: #035772;">Intelligent notification management system</span></a></h4>
+					<h4><span style="font-weight: 600;">✨Main Research:</span> <a href="./notimanager.html" target="_blank"><span style="color: #035772;">Notification management system</span></a></h4>
 					<div class="row">
 						<ul>
 							
 							<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices system_evaluation trigger social_support" id="noti_evaluation" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">Pinning, Sorting, and Categorizing Notifications: A Mixed-methods Usage and Experience Study of Mobile Notification-management Features </span> 
 								- Full paper | Project lead<br>
-								<u>Yong-Han Lin</u>,  Li-Ting Su, Uei-Dar Chen, Yi-Chi Lee, Peng-Jui Wang, Yung-Ju Chang 
-								<br><em>In submission to the 2024 ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies</em> (IMWUT '24) [R&R Cycle]
+								<!--<u>Yong-Han Lin</u>,  Li-Ting Su, Uei-Dar Chen, Yi-Chi Lee, Peng-Jui Wang, Yung-Ju Chang--> 
+								<em>Under Review</em>
 								<br>[<a class="abs_trigger" id="abs_noti_evaluation" style="cursor: pointer;">ABS</a>] 
 								[<a href="mailto:alberta.cs07@nycu.edu.tw" target="_blank">Request For Paper</a>]
 						   </div></li>
@@ -230,8 +230,8 @@
 					<ul>
 						<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices system_evaluation" id="noti_alert" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">"I Want Lower Tone for Work-Related Notifications": Exploring the Effectiveness of User-Assigned Notification Alerts in Improving User Speculation of and Attendance to Mobile Notifications </span> 
 							- Full paper | Collaborator
-							<br>Tang-Jie Chang, Li-Ting Su, <u>Yong-Han Lin</u>, Jie Tsai, Zi-Xun Tang, Yung-Ju Chang 
-							<br><em>In submission to the 2024 ACM International Conference on Mobile Human-Computer Interaction</em> (MobileHCI '24) [R&R Cycle]
+							<!--<br>Tang-Jie Chang, Li-Ting Su, <u>Yong-Han Lin</u>, Jie Tsai, Zi-Xun Tang, Yung-Ju Chang--> 
+							<br><em>Under Review</em> 
 							<br>[<a class="abs_trigger" id="abs_noti_alert" style="cursor: pointer;">ABS</a>] 
 							[<a href="mailto:alberta.cs07@nycu.edu.tw" target="_blank">Request For Paper</a>]
 						</div></li>
@@ -393,17 +393,16 @@
 						elementClicked_abs_noti_evaluation = true;
 						abs.innerHTML +=
 							"<div id='abs_text_noti_evaluation' style='border:dashed; padding:1em; border-width:1px; border-radius:5px; margin:5px 0; border-color:#AAAAAA;'>" +
-							"With the increasing number of smartphone notifications, users expend more effort in reading and acting on them. While prior " +
-							"research has proposed several notification management features, empirical evidence about these functionalities has been " +
-							"lacking. We developed a notification management app based on previous studies, encompassing sorting, and categorization, " +
-							"with both automatic and manual approaches, and manual pinning. Through a mixed-methods approach, this paper assesses " +
-							"the usage and perception of these features and compares their helpfulness across various approaches. Our results showed that " +
-							"among these features, pinning emerges as the most frequently used and the most helpful as it allows brief notification deferral, " +
-							"eases information access, and prevents accidental notification removal. We also found that user preference for features varies " +
-							"across different modes. Manual sorting aligns better with users’ ideal notification order compared to automated sorting. In " +
-							"contrast, participants rarely created manual categories and used them less often than automatic ones for accessing notifications. " +
-							"Finally, we discussed the reasons and context for using and not using the features, as well as the factors influencing the " +
-							"preference for manual or automatic features." +
+							"As smartphone notifications increase, so does the effort required to handle them effectively. Previous research has proposed " +
+							"various notification management features, but empirical evidence regarding their efficacy remains sparse. In response, we " +
+							"developed a notification management application incorporating features derived from prior studies, including both automatic " +
+							"and manual sorting, categorization, and manual pinning. Utilizing a mixed-methods approach, we explored how users interact " +
+							"with these features in their daily routines, with the aim to identify the underlying needs driving their usage. The results indicate " +
+							"that pinning was the most valued feature, serving diverse purposes such as deferring notifications, ensuring quick and constant " +
+							"access to information, preventing accidental deletions, and providing visual reminders. Conversely, manual categorization " +
+							"was underutilized, with participants relying on automated categories for notification access. Moreover, participants expressed " +
+							"a desire for automatic features to process and organize notifications based on topic and personalize them through user input. " +
+							"They also expected automatic sorting to adapt more dynamically to user contexts." +
 							"</div>"
 						;
 					}
