update personal website

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					</p>
 					<p>My research interests lie broadly in Human-Computer Interaction (HCI) and Human-centered AI.
 						I am interested in designing, building, and studying technologies that provide automation or/and empower end-users. 
-						In my current research, I designed a notification management system and used mixed-methods to study users' experiences with this system. 
+						In my current research, I designed a <a href="./notimanager.html" target="_blank">notification management system</a> and used mixed-methods to study users' experiences with this system. 
 						This system was built to facilitate users' workflows in reading and acting on notifications, helping them efficiently and effectively process notifications through our automated functions, while also providing them with manual functions to adjust these automations.
 						<!--As a HCI researcher, I envision a future where every automated system is intelligent enough to understand and adapt to the unique needs of individuals across various contexts while also enabling each user to have autonomy over its use.-->
 					</p>
@@ -192,7 +192,7 @@
 				<h5>(* indicates equal contribution)</h5>
 				<div style=border:solid;padding:1em;border-width:1px;border-radius:20px;margin-bottom:1.1em;border-color:#AAAAAA>
 					<!--<h4><span style="font-weight: 600;">✨Main Research:</span> Notification Management - [<a><div class="tooltip" style="cursor: pointer; color: #035772;">Project Site<span class="tooltiptext">Soon to come...</span></div></a>]</h4>-->
-					<h4><span style="font-weight: 600;">✨Main Research:</span> <a href="./notimanager.html" target="_blank"><span style="color: #035772;">Notification management system</span></a></h4>
+					<h4><span style="font-weight: 600;">✨Main Research:</span> <a href="./notimanager.html" target="_blank"><span style="color: #035772;">Notification System with Automatic and Manual Management Features</span></a></h4>
 					<div class="row">
 						<ul>
 							
