--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<section id="about">
 				<header class="major">
 		
-					<p>Hi, I am Yong-Han Lin, you can call me Johanne or in Chinese: 林詠涵. I am currently a research assistant located in Taiwan,
+					<p>Hi, I am Yong-Han Lin, you can call me Joanne or in Chinese: 林詠涵. I am currently a research assistant located in Taiwan,
 						being mentored by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
 						I received the degree of B.S. in Computer Science in the summer of 2022 from the <a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao Tung University). 
 						
@@ -73,7 +73,7 @@
 					<p>My research interests lie broadly in Human-Computer Interaction (HCI) and Human-centered AI.
 						I am interested in designing, building, and studying technologies that provide automation or/and empower end-users. 
 						In my current research, I designed a <a href="./notimanager.html" target="_blank">notification management system</a> and used mixed-methods to study users' experiences with this system. 
-						This system was built to facilitate users' workflows in reading and acting on notifications, helping them efficiently and effectively process notifications through our automated functions, while also providing them with manual functions to adjust these automations.
+						This system was built to facilitate users' workflows in reading and acting on notifications, helping them efficiently and effectively handle notifications through our automated functions, while also providing them with manual functions to adjust these automations.
 						<!--As a HCI researcher, I envision a future where every automated system is intelligent enough to understand and adapt to the unique needs of individuals across various contexts while also enabling each user to have autonomy over its use.-->
 					</p>
 					<p>
