update NotiManager website

--- a/notimanager.html
+++ b/notimanager.html
@@ -77,15 +77,18 @@
 								Do you sometimes feel stressed by notification overload when opening your notification drawer? 
 							</div>
 							<div style="margin-bottom: 10px;">
-								Here, we provide a solution for you.
+								Now, you can solve these problems with NotiManager.
 							</div>
 							<div>
-								<span style="color: white;">NotiManager</span> is an Android notification manager that automatically helps you sort and categorize notifications.
-								Simultaneously, you retain control over NotiManager. 
-								When using it, you have the flexibility to manually pin, sort, and categorize any notification according to your preferences. 
+								<span style="color: white;">NotiManager</span> is an Android notification manager that enhances your notification reading by automatically sorting your notifications, 
+								placing the ones you may prefer to read at the top, and by automatically categorizing your notifications, 
+								grouping the same types together. Simultaneously, you retain control over NotiManager, meaning you can 
+								manually pin, sort, and categorize any notification according to your preferences. 
+								With both automatic and manual features, NotiManager improves your experience of handling notifications.
 							</div>
 						</div>
 						
+						<h2 style="padding-top: 60px; margin-bottom: 30px;">How NotiManager works and how to use it?</h2>
 						<div class="features">
 							<section>
 								<span class="icon solid major fa-thumbtack"></span>
@@ -136,6 +139,7 @@
 							<br><span style="color: white;">👉🏻 </span>To retain information for future reference
 							<br><span style="color: white;">👉🏻 </span>To view the full content of the notification without having it deleted
 							<br><span style="color: white;">👉🏻 </span>To prevent the notification from being accidentally deleted
+							<br><span style="color: white;">👉🏻 </span>To visually enhance a notification's perceived importance
 						</p>
 
 						<!--<h2 style="padding-top: 60px;">What did our study participants say?</h2>
