update NotiManager website

--- a/notimanager.html
+++ b/notimanager.html
@@ -273,7 +273,7 @@
 				<section id="team" class="wrapper" style="background-color: white;">
 					<div class="inner">
 						<h2 style="color: #483D88;">Research Team</h2>
-						<div style="color: #483D88; font-weight: 600;">We are a group of graduate and undergraduate researchers from National Yang-Ming Chiao-Tung University's Mobile Ubiquitous Interaction Lab.</div>
+						<div style="color: #483D88; font-weight: 600;">We are a group of graduate and undergraduate researchers from National Yang-Ming Chiao-Tung University's Mobile and Ubiquitous Interaction Lab.</div>
 						<div class="row" >
 							<div class="image" style="margin: 5px;"><img src="images/NotiManager/lab_logo.jpg" width="120" height="120" style="border-radius:50%;" alt="" /><div class="name_text">Yong-Han Lin</div></div>
 							<div class="image" style="margin: 5px;"><img src="images/NotiManager/lab_logo.jpg" width="120" height="120" style="border-radius:50%;" alt="" /><div class="name_text">Li-Ting Su</div></div>
