--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<header class="major">
 		
 					<p>Hi, I am Yong-Han Lin, you can call me Joanne or in Chinese: 林詠涵. I am currently a research assistant located in Taiwan,
-						being mentored by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
+						being mentored by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile and Ubiquitous Interaction (MUI) Lab.
 						I received the degree of B.S. in Computer Science in the summer of 2022 from the <a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao Tung University). 
 						
 					</p>
