update NotiManager website

--- a/notimanager.html
+++ b/notimanager.html
@@ -10,12 +10,12 @@
 		<link rel="icon" type="image/x-icon" href="images/NotiManager/logo.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="NotiManager - research application for intelligent notificaiton management" />
+		<meta name="description" content="NotiManager - research application for automatic & manual notification management" />
 		<meta property="og:title" content="NotiManager" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://yonghanlin.github.io/notimanager.html" />
 		<meta property="og:image" content="images/NotiManager/logo.jpg" />
-		<meta property="og:description" content="NotiManager - research application for intelligent notificaiton management" />
+		<meta property="og:description" content="NotiManager - research application for automatic & manual notification management" />
 
 		<link rel="stylesheet" href="./more_about_me/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="./more_about_me/assets/css/noscript.css" /></noscript>
