--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 								<a href="./more_about_me/index.html#other" target="_blank">doing something cool</a>
 							</li>
 							<li>
-								playing badminton, watching movies, and playing board games (especially Avalon!)
+								playing Mario Kart 🚦 🎮 🏁 (my ID: 984669968853, let's play together!)
 							</li>
 						</ul>
 					</div>
