--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 					</p>
 					<p>My research interests lie broadly in Human-Computer Interaction (HCI) and Human-centered AI.
 						I am interested in designing, building, and studying technologies that empower end-users. 
-						In my current research, I designed a <a href="./notimanager.html" target="_blank">notification management system</a> and used mixed-methods to study users' experiences with this system. 
-						This system was built to facilitate users' workflows in reading and acting on notifications, helping them efficiently and effectively handle notifications through our automated functions, while also providing them with manual functions to adjust these automations. I want to support end-users in feeling control over technologies, especially automated ones.
+						In my current research, I designed and built a <a href="./notimanager.html" target="_blank">notification management system</a> and used mixed-methods to study users' experiences with this system. 
+						It was built to facilitate users' workflows in reading and acting on notifications, helping them efficiently and effectively handle notifications through automated functions, while also providing them with manual functions to adjust these automations. 
+						My goal is to support people in using technology as a helpful tool that enhances their lives, rather than as something that causes negative impacts or harm.
 						<!--As a HCI researcher, I envision a future where every automated system is intelligent enough to understand and adapt to the unique needs of individuals across various contexts while also enabling each user to have autonomy over its use.-->
 					</p>
 					<p>
