--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 								<a href="./more_about_me/index.html#other" target="_blank">doing something cool</a>
 							</li>
 							<li>
-								playing Mario Kart 🚦 🎮 🏁 (my ID: 984669968853, let's play together!)
+								playing Mario Kart 🚦 🎮 🏁
 							</li>
 						</ul>
 					</div>
